[project]
name = "icepanel"
version = "0.1.0"
description = "Python SDK for IcePanel"
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [
  { name = "IcePanel" }
]
dependencies = []

[project.optional-dependencies]
dev = [
  "pytest>=7.4.0",
]

[project.urls]
Homepage = "https://icepanel.io"
Repository = "https://github.com/IcePanel/icepanel-py"

[build-system]
requires = ["setuptools>=67.0"]
build-backend = "setuptools.build_meta"
